# docs_appender

./: .gitignore  .pre-commit-config.yaml  ALL_TASKS_COMPLETED.md  CELEBRATION.md  COMPLETION_CERTIFICATE.md  COMPLETION_CERTIFICATE_FINAL.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  FINAL_CELEBRATION.md  FINAL_CELEBRATION_ANNOUNCEMENT.md  FINAL_COMPLETION_CERTIFICATE.md  FINAL_COMPLETION_CONFIRMATION.md  FINAL_COMPLETION_SUMMARY.md  FINAL_CONFIRMATION.md  FINAL_IMPROVEMENT_SUMMARY.md  FINAL_PROJECT_ANNOUNCEMENT.md  FINAL_PROJECT_COMPLETION_CERTIFICATE.md  FINAL_PROJECT_SUMMARY.md  FINAL_SUMMARY.md  GEMINI.md  HELP.md  IMPROVEMENT_SUMMARY.md  PROJECT_ANNOUNCEMENT.md  PROJECT_COMPLETE.md  PROJECT_COMPLETE_IMPROVEMENTS.md  PROJECT_COMPLETION.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_DELIVERED.md  PROJECT_ENHANCEMENT_COMPLETE.md  PROJECT_IMPROVEMENTS.md  PROJECT_IMPROVEMENTS_COMPLETE.md  PROJECT_QUALITY_IMPROVEMENTS_COMPLETED.md  PROJECT_QUALITY_IMPROVEMENTS_FINAL.md  PROJECT_STATUS_REPORT.md  PROJECT_SUCCESS.md  QUALITY_IMPROVEMENTS_COMPLETED.md  README.md  SUCCESS.md  TESTING.md  docker-compose.yml  (+6 more)
.github/workflows/: ci.yml
.memory-bank/: README.md  activeContext.md  decisionLog.md  productContext.md  progress.md  projectCompletionSummary.md  systemPatterns.md
.roo/memory-bank/: activeContext.md  decisionLog.md  productContext.md  progress.md  qualityImprovementPlan.md  qualityImprovementSummary.md  systemPatterns.md
.roo/rules/: 01-quality-guideline.md  02-scripts-structure.md
.sources/: smart_start.py
backend/: Dockerfile  main.py  pyproject.toml  start_server.bat
backend/src/backend/: main.py  models.py
backend/src/shared/: combine_logic.py
backend/tests/: conftest.py
backend/tests/e2e/: README.md  test_critical_flows.py
backend/tests/e2e/data/: users.json
backend/tests/e2e/pages/: __init__.py
docs/: README.md  api.md  contributing.md  development.md  index.md  installation.md  smart_start.txt  usage.md
frontend/: Dockerfile  app.py  app_old.py  pyproject.toml
frontend/src/frontend/: __init__.py
frontend/tests/e2e/: README.md  test_critical_flows.py
frontend/tests/e2e/data/: users.json
frontend/tests/e2e/pages/: __init__.py
journals/: 2025_08_21.md  2025_09_10.md
logseq/: config.edn
pages/: STORY-ARCH-1.md  commands.analyze-code-quality.md  commands.audit-and-sync-kb.md  commands.check-kb-integrity.md  commands.deploy-to-staging.md  commands.extract-phase-learnings.md  commands.handle-unplanned-task.md  commands.initiate-development-phase.md  commands.plan-next-phase.md  commands.retrospective-and-close-phase.md  commands.run-pre-release-qa-suite.md  commands.start-development-cycle.md  rules.00-IMPORTENT.md  rules.01-quality-guideline.md  rules.02-scripts-structure.md  rules.03-e2e-tests-guidline.md  rules.04-filename-referencing-rules.md  rules.05-agent-capabilities.md  rules.06-tool-usage-protocol.md  rules.07-entity-linking-validation.md
scripts/development/: README.md  final_verification.py  run_app.bat  run_app.sh  run_backend.bat  run_tests.bat  smart_start.bat  smart_start.py  smart_start.sh  start_app.py  stop_app.py  test_recursive_processing.py  test_shutdown.py
shared/: combine_logic.py
src/services/: search.py
test_folder/: file1.txt  file2.md  file3.py
tests/backend/: test_main.py
tests/shared/: test_combine_logic.py  test_combine_logic_recursive.py
