[project]
name = "file-combiner-backend"
version = "0.1.0"
description = "FastAPI backend for the File Combiner application."
authors = [{ name = "Your Name", email = "you@example.com" }] # Замените на свои данные
readme = "README.md" # Если есть отдельный README для бэкенда, иначе можно удалить
requires-python = ">=3.8"

dependencies = [
    "fastapi>=0.68.0,<0.69.0",
    "uvicorn>=0.15.0,<0.16.0",
    "python-multipart>=0.0.5,<0.1.0",
    "pydantic>=1.8.0,<2.0.0",
    "PyYAML>=5.4.1,<7.0.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.ruff]
line-length = 90
[tool.ruff.lint]
select = ["F","E","W","I","UP","B","BLE"]
ignore = ["E501", "B008"]
[tool.ruff.format]
quote-style = "double"

# [tool.mypy]
# python_version = "3.8"