[project]
name = "file-combiner-frontend"
version = "0.1.0"
description = "Streamlit frontend for the File Combiner application."
authors = [{ name = "Your Name", email = "you@example.com" }] # Замените на свои данные
readme = "README.md" # Если есть отдельный README для фронтенда, иначе можно удалить
requires-python = ">=3.8"

dependencies = [
    "streamlit>=1.10.0,<2.0.0",
    "requests>=2.25.0,<3.0.0",
    "PyYAML>=5.4.1,<7.0.0",
]

[tool.uv]
dev-dependencies = [
    # Добавьте сюда зависимости для разработки, если потребуются
]

# Опционально: настройки для инструментов
# [tool.ruff]
# line-length = 88