[project]
name = "file-combiner-frontend"
version = "0.1.0"
description = "Streamlit frontend for the File Combiner application."
authors = [{ name = "Your Name", email = "you@example.com" }] # Замените на свои данные
readme = "README.md" # Если есть отдельный README для фронтенда, иначе можно удалить
requires-python = ">=3.8"

dependencies = [
    "streamlit>=1.10.0,<2.0.0",
    "requests>=2.25.0,<3.0.0",
    "PyYAML>=5.4.1,<7.0.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.ruff]
line-length = 90
[tool.ruff.lint]
select = ["F","E","W","I","UP","B","BLE"]
ignore = ["E501", "BLE001"]
[tool.ruff.format]
quote-style = "double"

# Опционально: настройки для инструментов
# [tool.mypy]
# python_version = "3.8"